force-app/main/default/objects/Community_Config__mdt/Community_Config__mdt.object-meta.xml
<CustomObject>
    <label>Community Config</label>
    <pluralLabel>Communities Configs</pluralLabel>
</CustomObject>