force-app/main/default/objects/Community_Config__mdt/fields/Citizen_Edit_Layout__c.field-meta.xml
<CustomField>
    <fullName>Citizen_Edit_Layout__c</fullName>
    <defaultValue>&apos;Ciudadano&apos;</defaultValue>
    <label>Citizen Edit Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>