force-app/main/default/objects/Community_Config__mdt/fields/LEX_Domain__c.field-meta.xml
<CustomField>
    <fullName>LEX_Domain__c</fullName>
    <label>LEX Domain</label>
    <required>true</required>
    <type>Url</type>
</CustomField>