force-app/main/default/objects/Community_Config__mdt/fields/Login_Footer_Title__c.field-meta.xml
<CustomField>
    <fullName>Login_Footer_Title__c</fullName>
    <description>Titulo del footer de la pagina de login. El texto que aparece al lado de la bandera.</description>
    <inlineHelpText>Titulo del footer de la pagina de login. El texto que aparece al lado de la bandera.</inlineHelpText>
    <label>Login Footer Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>