force-app/main/default/objects/Community_Config__mdt/fields/Login_Tab_Title__c.field-meta.xml
<CustomField>
    <fullName>Login_Tab_Title__c</fullName>
    <description>Titulo que aparece arriba en la tab, de la pagina vf de login.</description>
    <inlineHelpText>Titulo que aparece arriba en la tab, de la pagina vf de login.</inlineHelpText>
    <label>Login Tab Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>