force-app/main/default/objects/Community_Config__mdt/fields/Root_Admin_Level__c.field-meta.xml
<CustomField>
    <fullName>Root_Admin_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Root Admin Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>