force-app/main/default/objects/Community_Config__mdt/fields/RootTerritory__c.field-meta.xml
<CustomField>
    <fullName>RootTerritory__c</fullName>
    <defaultValue>&apos;Argentina&apos;</defaultValue>
    <label>RootTerritory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>