force-app/main/default/objects/Community_Config__mdt/fields/Static_Resourse_Name_FavIcon__c.field-meta.xml
<CustomField>
    <fullName>Static_Resourse_Name_FavIcon__c</fullName>
    <description>Nombre del recurso estatico con el favIcon. La metadata solo se utiliza en la vf de login de la comunidad por ahora.</description>
    <inlineHelpText>Nombre del recurso estatico con el favIcon. La metadata solo se utiliza en la vf de login de la comunidad por ahora.</inlineHelpText>
    <label>Static Resourse Name - FavIcon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>