force-app/main/default/objects/Community_Config__mdt/fields/Static_Resourse_Name_ZipBundle__c.field-meta.xml
<CustomField>
    <fullName>Static_Resourse_Name_ZipBundle__c</fullName>
    <description>Nombre del recurso con la carpeta con los recursos de la comunidad. Por ahora, la pagina de login solo va a buscar la bandera que se muestra en el footer.</description>
    <inlineHelpText>Nombre del recurso con la carpeta con los recursos de la comunidad. Por ahora, la pagina de login solo va a buscar la bandera que se muestra en el footer.</inlineHelpText>
    <label>Static Resourse Name - ZipBundle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>