force-app/main/default/objects/Community_Config__mdt/fields/VF_Domain__c.field-meta.xml
<CustomField>
    <fullName>VF_Domain__c</fullName>
    <label>VF Domain</label>
    <required>true</required>
    <type>Url</type>
</CustomField>